--- a/index.html
+++ b/index.html
@@ -440,14 +440,14 @@
                     ./images/team2-tab.jpeg   1x,
                     ./images/team2-tabx2.jpeg 2x
                   "
-                  media="(max-width: 768px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
                     ./images/team2-mob.jpeg   1x,
                     ./images/team2-mobx2.jpeg 2x
                   "
-                  media="(max-width: 767px)"
+                  media="(min-width: 360px)"
                 />
                 <img
                   class="team-card__photo"
