--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 />
                 <source
                   srcset="
-                    ./images/team4.jpeg-mob   1x,
+                    ./images/team4-mob.jpeg   1x,
                     ./images/team4-mobx2.jpeg 2x
                   "
                   media="(min-width: 360px)"
