Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </span>
               </label>
 
-              <label class="order-form__field">
+              <label class="order-form__field order-form__field--comment">
                 <span class="order-form__name">Коментар</span>
 
                 <textarea
